# embedded-hal-temperature-controller

./: .gitignore  CMakeLists.txt  GITHUB_AUTH.md  GITHUB_UPLOAD.md  GIT_UPLOAD.md  PROJECT_CLEAN.md  README.md  prj.conf  setup.sh
docs/: README.md  architecture_diagram.puml  class_diagram.puml  design.html  design.rst  index.html  sequence_diagram.puml
simulation/: CMakeLists.txt  main_sim.cpp  pid_sim.cpp  zephyr_sim.cpp  zephyr_sim.h
src/: main.cpp
src/app/: AdvancedTemperatureController.hpp  TemperatureController.cpp  TemperatureController.hpp
src/domain/: PIDController.hpp  TemperatureProcessor.hpp
src/hal/: AdcSensor.cpp  AdcSensor.hpp  GpioFan.cpp  GpioFan.hpp  IActuator.hpp  ILogger.hpp  ISensor.hpp  IVariableActuator.hpp  UartLogger.cpp  UartLogger.hpp  VariableFan.hpp  drivers.hpp
tests/: CMakeLists.txt  run_tests.sh  test_adc_sensor.cpp  test_gpio_fan.cpp  test_main.cpp  test_pid_controller.cpp  test_temperature_controller.cpp  test_temperature_processor.cpp  test_uart_logger.cpp  ztest_framework.hpp
tests/include/: fff.h
tests/mocks/: fff_mocks.cpp  fff_mocks.hpp  mock_drivers.cpp  mock_drivers.hpp
